# KLM-V2.2

./: .env.v2.2.example  .gitignore  AGENTS.md  AHA_MOMENTS.md  DEVIATIONS.md  PROJECT_MAP.md  README.md  V22_FRAGMENTS_ASSESSMENT.md  V22_PHASE05_COMPLETION_REPORT.md  V22_PHASE06_COMPLETION_REPORT.md  V22_PHASE07_COMPLETION_REPORT.md  pyproject.toml
30-Implementation/n8n/: README.md
30-Implementation/n8n/workflows/: content-ingestion-production.json  content-ingestion-template.json  github_commit_handler.json  lyrics_ingestion.json  lyrics_ingestion_v23.json  session_auto_save.json
30-Implementation/prefect/: README.md
30-Implementation/prefect/flows/: __init__.py  content_ingestion.py  ingestion_pipeline.py  night_shift.py  self_healing_flow.py
30-Implementation/prefect/tasks/: __init__.py  gemini_tasks.py  whisper_tasks.py  youtube_tasks.py
40-SOPs/AGENTS/: AGENT-ANALYST.md  AGENT-BIZDEV.md  AGENT-CEO.md  AGENT-CHIEF_OF_STAFF.md  AGENT-CODESENTINEL.md  AGENT-CONSULTANT.md  AGENT-CREATIVE.md  AGENT-GUARDIAN.md  AGENT-HISTORIAN.md  AGENT-MEMORY_KEEPER.md  AGENT-MOLT.md  AGENT-N8N_EXPERT.md  AGENT-OPENCODE.md  AGENT-PM.md  AGENT-PREFECT_EXPERT.md  AGENT-STAKEHOLDER_LIAISON.md  AGENT-STRATEGIST.md  AGENT-TECHNICIAN.md  AGENT-VIBE_MONITOR.md  COORDINATION_PROTOCOL.md  EMERGENCY_SESSION_PROTOCOL.md  MARS_COORDINATION_PROTOCOL.md  MULTI_AGENT_CHAT_PROTOCOL.md  README.md
90-Project-Board/HANDOFFS/TEMPLATES/: HANDOFF_TEMPLATE.md
90-Project-Board/TEMPLATES/: task-template.md
backend/: pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/: context.py
backend/src/services/: __init__.py  openrag_service.py
backend/src/workers/: conflict_resolver.py  parallel_executor.py
backend/supabase/migrations/: 001_enable_pgvector.sql  002_create_lyrics_table.sql  003_create_agent_sessions_table.sql
docs/: ARCHITECTURE_V2.3.md  V21_IMPLEMENTATION_PLAN.md
scripts/: Dockerfile.aha  Dockerfile.project-map  agent_docs.py  aha_detector.py  codebase_tracker.py  commit_msg_validate.py  end_of_day.py  end_of_day.sh  install_git_hooks.ps1  lci_mcp_smoke_test.py  mars_audit.py  migrate_to_openrag.py  post_commit_index.ps1  precommit_enforce_branch.py  precommit_enforce_twin_commit.py  project_map_generator.py  setup_python312.bat  setup_python312.ps1  setup_v2.2.sh  update_docs.py  v2_to_v21_report.py
scripts/git-hooks/: post-commit
